Fixed column width, minor details

--- a/client/course/resultGraph/resultGraph.html
+++ b/client/course/resultGraph/resultGraph.html
@@ -1,14 +1,15 @@
 <template name="resultGraph">
-  <div id="{{id}}_{{semester}}" class="course" style="border-color: {{color}}">
+  <div id="{{id}}_{{semester}}" class="course {{color}}">
     <div class="course-top">
       <div class="name">{{name}}</div>
-      <div class="top-bar" style="background: {{color}}">
+      <div class="top-bar {{color}}">
       <div class="grade">{{grade}}</div>
       <div class="credits">
         <!-- <div class="bracket">[</div> -->
         {{credits}}<span>stp</span>
         <!-- <div class="bracket">]</div> -->
       </div>
+      <paper-ripple></paper-ripple>
       </div>
     </div>
     <div class="course-bottom">
