legend added + selection = border

--- a/client/future/future.html
+++ b/client/future/future.html
@@ -1,6 +1,13 @@
 <template name="future">
-  <div id="profile" class="profile"> Jouw profiel: <div id="profilebox" class="box"></div></div>
-  <!-- <div id="legend" class="futurelegend"></div> -->
+  <!-- <div id="profile" class="profile"> Jouw profiel: <div id="profilebox" class="box"></div></div> -->
+
+  <div id="legend" class="legend">
+    <div id="3y" class="legend3">3j</div>
+    <div id="4y" class="legend4">4j</div>
+    <div id="5y" class="legend5">5j</div>
+    <div id="not" class="legendnot">Niet</div>
+  </div>
+
   <div id="fields" class='fields'> 
     <svg id="best" class="flex-item best" ></svg>
     <svg id="middle" class="flex-item middle"></svg>
