Fixed zoom graph

--- a/client/course/resultGraph/resultGraph.html
+++ b/client/course/resultGraph/resultGraph.html
@@ -14,6 +14,7 @@
     </div>
     <div class="course-bottom">
       <svg class="histogram"></svg>
+      <paper-ripple></paper-ripple>
     </div>
   </div>
 </template>
