some feedback of francesco

--- a/client/future/future.html
+++ b/client/future/future.html
@@ -11,9 +11,9 @@
   <div id="fields" class='fields'> 
     <div id='legendbest' class='flex-item fieldlegend' > CSE >= {{limit1}} </div>
     <svg id="best" class="flex-item best" ></svg>
-    <div id='legendbest' class='flex-item fieldlegend' > {{limit1}} >= CSE > {{limit2}}</div>
+    <div id='legendbest' class='flex-item fieldlegend' > {{limit2}} &#60; CSE &#60;= {{limit1}}</div>
     <svg id="middle" class="flex-item middle"></svg>
-    <div id='legendbest' class='flex-item fieldlegend' > CSE &#60; {{limit2}} </div>
+    <div id='legendbest' class='flex-item fieldlegend' > CSE &#60;= {{limit2}} </div>
     <svg id="low" class="flex-item low"></svg>
 </div>
   
