--- a/client/failedcourses/failedcourses.html
+++ b/client/failedcourses/failedcourses.html
@@ -7,16 +7,19 @@
           <div class="try1 {{try1.bold}}">{{try1.grade}}</div> -
           <div class="try2 {{try2.bold}}">{{try2.grade}}</div>
         </div>
-        <paper-ripple></paper-ripple>        
+               
         <div class="credits">
           {{credits}}<span>stp</span>
         </div>
+      <paper-ripple></paper-ripple>         
       </div>
     </div>
     <div class="course-bottom">
-      <div class='tolerancecredits'>12</div>
-      <paper-ripple></paper-ripple>      
-      <!-- <svg class="histogram"></svg> -->
+      <div id="tolerancecredits" class='tolerancecredits'>12</div>
+      <div class='tolerate'>
+        Tolereren? <br>
+        <input type="checkbox" name="tolerate" value="no">   
+      </div>
     </div>
   </div>
 </template>
