Added basic collapse/expand columns feature

--- a/client/cseplanning/cseplanning.html
+++ b/client/cseplanning/cseplanning.html
@@ -1,5 +1,5 @@
 <template name="cseplanning">
-  <div id="cseplanning">
+  <div id="cseplanning" class="bottom">
     <div class="slideflex">
       <div class="slider-top">
       <span>jaar 1</span><div class="value"><span>{{jaar1}}</span>/60</div>
