busy with tolerating

--- a/client/failedcourses/failedcourses.html
+++ b/client/failedcourses/failedcourses.html
@@ -14,11 +14,10 @@
       <paper-ripple></paper-ripple>         
       </div>
     </div>
-    <div class="course-bottom">
-      <div id="tolerancecredits" class='tolerancecredits'>12</div>
-      <div class='tolerate'>
-        Tolereren? <br>
-        <input type="checkbox" name="tolerate" value="no">   
+    <div class="course-bottom tolerate">
+      <div class='options-container'>
+        <div id="stay-failed" class='stay-failed'><div class='check-fail'>&#x2714;</div>Opnieuw afleggen</div>
+        <div id="tolerate-course" class='tolerate-course'><div class='check-tolerate'>&#x2714;</div>Tolereren</div>
       </div>
     </div>
   </div>
