--- a/client/body/body.html
+++ b/client/body/body.html
@@ -163,12 +163,8 @@
         <div class="top">
           <div class="fa fa-compress"><paper-ripple></paper-ripple></div>
           <div class="column-title">Onsuccesvolle vakken</div>
-          <!-- <div class="periode">2e jaar</div> -->
-          <div class="CSE">
-            <!-- {{#with CSE_september}}
-            {{> CSE_bar }}
-            {{/with}} -->
-          </div>
+          <div class="periode">Tolerantiepunten</div>
+          <div id='tolerantiepunten' class="tolerantiepunten">0/12<paper-progress value=12 max="12" min="0"></paper-progress>12</div>
         </div>
         <div class="bottom">
           {{#if Template.subscriptionsReady}}
