--- a/client/course/resultGraph/resultGraph.html
+++ b/client/course/resultGraph/resultGraph.html
@@ -11,6 +11,7 @@
       </div>
       <paper-ripple></paper-ripple>
       </div>
+      <paper-ripple></paper-ripple>
     </div>
     <div class="course-bottom">
       <svg class="histogram"></svg>
