Fixed top bar to expand course

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -235,7 +235,12 @@
         <div class="top">
           <div class="fa compress-colfuture fa-compress"><paper-ripple></paper-ripple></div>
           <div class="column-title">bachelor</div>
-          <div class="CSE"></div>
+          <div id="legend" class="periode legend">
+            <div class="legend-item legend3">3j</div>
+            <div class="legend-item legend4">4j</div>
+            <div class="legend-item legend5">5j</div>
+            <div class="legend-item legendnot">Niet</div>
+          </div>
         </div>
         <div class="bottom">
           {{> future}}
