transitions in color + blue tolerated color

--- a/client/failedcourses/failedcourses.html
+++ b/client/failedcourses/failedcourses.html
@@ -4,8 +4,9 @@
       <div class="name">{{name}}</div>
       <div class="top-bar {{color}} ">
         <div class="grade">
-          <div class="try1 {{try1.bold}}">{{try1.grade}}</div> -
-          <div class="try2 {{try2.bold}}">{{try2.grade}}</div>
+          <div class="try {{try1.bold}}">{{try1.grade}} - </div>
+          <div class="try {{try2.bold}}">{{try2.grade}}</div>
+          <div class="getolereerd">Getolereerd</div>          
         </div>
                
         <div class="credits">
