--- a/client/future/future.html
+++ b/client/future/future.html
@@ -2,11 +2,11 @@
   <!-- <div id="profile" class="profile"> Jouw profiel: <div id="profilebox" class="box"></div></div> -->
   <div class="fields">
     <div class="group flex-item">
-      <div id="legendbest" class="fieldlegend" > CSE >= {{limit1}} </div>
+      <div id="legendbest" class="fieldlegend" > CSE > {{limit1}} </div>
       <svg id="best" class="best" ></svg>
     </div>
     <div class="group flex-item">
-      <div id="legendbest" class="fieldlegend" > {{limit2}} &#60;= CSE &#60;{{limit1}}</div>
+      <div id="legendbest" class="fieldlegend" > {{limit2}} &#8804; CSE &#8804; {{limit1}}</div>
       <svg id="middle" class="middle"></svg>
     </div>
     <div class="group flex-item">
