--- a/client/main.html
+++ b/client/main.html
@@ -20,7 +20,7 @@
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <style is="custom-style">
     paper-progress {
-      width:100px;
+      width:40%;
       border:solid 1px #777777;
       --paper-progress-active-color: #777777;
       margin:auto;
