--- a/client/body/body.html
+++ b/client/body/body.html
@@ -170,7 +170,10 @@
           <div class="fa compress-colfail fa-compress"><paper-ripple></paper-ripple></div>
           <div class="column-title">Onsuccesvolle vakken</div>
           <div class="periode">Tolerantiepunten</div>
-          <div id='tolerantiepunten' class="tolerantiepunten"><paper-progress value=12 max="12" min="0"></paper-progress><i>12</i><b>/12</b></div>
+          <div id='tolerantiepunten' class="tolerantiepunten">
+            <paper-progress value=12 max="12" min="0"></paper-progress>
+            <span>12</span><b>/12</b>
+          </div>
         </div>
         <div class="bottom">
           {{#if Template.subscriptionsReady}}
