--- a/client/failedcourses/failedcourses.html
+++ b/client/failedcourses/failedcourses.html
@@ -15,7 +15,7 @@
       </div>
       <paper-ripple></paper-ripple>
     </div>
-    <div class="course-bottom tolerate">
+    <div class="course-bottom tolerate {{color}}">
       <div class='options-container'>
         <div id="stay-failed" class='tolerate-checkbox stay-failed'>
           <div class='checkdot check-fail'>
