--- a/client/failedcourses/failedcourses.html
+++ b/client/failedcourses/failedcourses.html
@@ -2,7 +2,7 @@
   <div id="{{id}}_failed" class="course failed-course {{color}}" style="border-color: {{color}}; min-height: 50px;">
     <div class="course-top {{color}} {{canTolerate}}">
       <div class="name">{{name}}</div>
-      <div class="top-bar {{color}} ">
+      <div class="top-bar {{color}} {{canTolerate}} ">
         <div class="grade">
           <div class="try {{try1.bold}}">{{try1.grade}} - </div>
           <div class="try {{try2.bold}}">{{try2.grade}}</div>
@@ -15,7 +15,7 @@
       </div>
       <paper-ripple></paper-ripple>
     </div>
-    <div class="course-bottom tolerate {{color}}">
+    <div class="course-bottom tolerate {{color}} {{canTolerate}}">
       <div class='options-container'>
         <div id="stay-failed" class='tolerate-checkbox stay-failed'>
           <div class='checkdot check-fail'>
