--- a/client/failedcourses/failedcourses.html
+++ b/client/failedcourses/failedcourses.html
@@ -4,8 +4,8 @@
       <div class="name">{{name}}</div>
       <div class="top-bar {{color}} {{canTolerate}} ">
         <div class="grade">
-          <div class="try {{try1.bold}}">{{try1.grade}} - </div>
-          <div class="try {{try2.bold}}">{{try2.grade}}</div>
+          <div class="try {{try1.bold}}">{{try1.grade}} |  </div>
+          <div class="try {{try2.bold}}">&nbsp; {{try2.grade}}</div>
           <div class="getolereerd">Getolereerd</div>          
         </div>
 
