--- a/client/body/body.html
+++ b/client/body/body.html
@@ -170,7 +170,7 @@
           <div class="fa compress-colfail fa-compress"><paper-ripple></paper-ripple></div>
           <div class="column-title">Onsuccesvolle vakken</div>
           <div class="periode">Tolerantiepunten</div>
-          <div id='tolerantiepunten' class="tolerantiepunten">
+          <div id='tolerantiepunten' class="tolerantiepunten flickering">
             <paper-progress value=12 max="12" min="0"></paper-progress>
             <span>12</span><b>/12</b>
           </div>
