--- a/client/body/body.html
+++ b/client/body/body.html
@@ -172,7 +172,7 @@
           <div class="periode">Tolerantiepunten</div>
           <div id='tolerantiepunten' class="tolerantiepunten flickering">
             <paper-progress value=12 max="12" min="0"></paper-progress>
-            <span>12</span><b>/12</b>
+            <span> 12 </span><b> /12</b>
           </div>
         </div>
         <div class="bottom">
@@ -200,7 +200,10 @@
         <div class="top">
           <div class="fa compress-planning fa-compress"><paper-ripple></paper-ripple></div>
           <div class="column-title">Studiebelastingplanning</div>
-          <div class="CSE"></div>
+          <div id='creditsplanned' class="creditsplanned">
+            <paper-progress value=0 max="180" min="0"></paper-progress>
+            <span>0 </span><b> /180</b>
+          </div>
         </div>
         {{#if Template.subscriptionsReady}}
         {{> cseplanning}}
