flicker if cannot tolerate because cse low

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -138,7 +138,7 @@
           <div class="fa compress-colsept fa-compress"><paper-ripple></paper-ripple></div>
           <div class="column-title">Augustus</div>
           <div class="periode">3e examenperiode</div>
-          <div class="CSE">
+          <div id="CSE_sept" class="CSE flickering">
             {{#with CSE_september}}
             {{> CSE_bar }}
             {{/with}}
