--- a/client/cseplanning/cseplanning.html
+++ b/client/cseplanning/cseplanning.html
@@ -8,10 +8,19 @@
     </div>
     <div class="slideflex">
       <div class="slider-top">
-      <span>jaar 2</span><div class="value"><span>{{jaar2}} stp</span></div>
+        <span>jaar 2</span>
+        <div class="value"><span>{{jaar2}} stp</span></div>
       </div>
       <div id="cseslider_y2"></div>
+      <div class="slider-top">
+          <span>semester 1</span>
+          <div class="value"><span>{{jaar2a}} stp</span></div>
+        </div>
       <div id="cseslider_y2a"></div>
+      <div class="slider-top">
+          <span>semester 2</span>
+          <div class="value"><span>{{jaar2b}} stp</span></div>
+        </div>
       <div id="cseslider_y2b"></div>    
     </div>
     <div class="slideflex">
