--- a/client/cseplanning/cseplanning.html
+++ b/client/cseplanning/cseplanning.html
@@ -12,12 +12,12 @@
         <div class="value"><span>{{jaar2}} stp</span></div>
       </div>
       <div id="cseslider_y2"></div>
-      <div class="slider-top">
+      <div class="slider-top semester">
           <span>semester 1</span>
           <div class="value"><span>{{jaar2a}} stp</span></div>
         </div>
       <div id="cseslider_y2a"></div>
-      <div class="slider-top">
+      <div class="slider-top semester">
           <span>semester 2</span>
           <div class="value"><span>{{jaar2b}} stp</span></div>
         </div>
