--- a/client/body/body.html
+++ b/client/body/body.html
@@ -152,7 +152,7 @@
             {{> course}}
           </div>
           {{/each}}
-          <!-- <div class="courseseparator"></div> -->
+          <div class="courseseparator"></div>ß
           {{#each studentCourses 2 false 2}}
           <div class="flex-item">
             {{> course}}
@@ -183,7 +183,7 @@
             {{> failedCourse}}
           </div>
           {{/each}}
-          <!-- <div class="courseseparator"></div> -->
+          <div class="courseseparator"></div>
           {{#each coursesLeft 2}}
           <div class="flex-item">
             {{> failedCourse}}
