--- a/client/body/body.html
+++ b/client/body/body.html
@@ -152,7 +152,7 @@
             {{> course}}
           </div>
           {{/each}}
-          <div class="courseseparator"></div>ß
+          <div class="courseseparator"></div>
           {{#each studentCourses 2 false 2}}
           <div class="flex-item">
             {{> course}}
