--- a/client/body/body.html
+++ b/client/body/body.html
@@ -17,7 +17,7 @@
       <div class="flex-5columns">
         {{> trajectory}}
         {{#if Fails}}
-        {{/if}}
+        {{/if}}       
       </div>
       <div class="flex-column flex-september colfail">
         {{> september}}
@@ -38,6 +38,7 @@
         {{/if}}
       </div>
       {{/unless}}
+      <input type="button" value="Start session" class="button"  id="startButton">
     </div>
 
     <!-- Lower row -->
