fix tolerantiepunten in session

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -173,8 +173,8 @@
           <div class="column-title">Onsuccesvolle vakken</div>
           <div class="periode">Tolerantiepunten</div>
           <div id='tolerantiepunten' class="tolerantiepunten flickering">
-            <paper-progress value=12 max="12" min="0"></paper-progress>
-            <span> 12 </span><b> /12</b>
+            <paper-progress value={{toleranceCredits}} max="12" min="0"></paper-progress>
+            <span> {{toleranceCredits}} </span><b> /12</b>
           </div>
         </div>
         <div class="bottom">
