--- a/client/body/body.html
+++ b/client/body/body.html
@@ -15,45 +15,6 @@
 
 
 <div class="flex-container">
-    <!--Upper row-->
-    <div class="flex-row">
-        {{#if ShowSeptember}}
-            {{#if Fails}}
-                <div class="flex-5columns">
-                    {{> trajectory}}
-                </div>
-            {{else}}
-                <div class="flex-5columns">
-                    {{> trajectory}}
-                </div>
-            {{/if}}
-        {{else if ShowJuni}}
-            {{#if Fails}}
-                <div class="flex-4columns">
-                    {{> trajectory}}
-                </div>
-                <div class="flex-column flex-september colfail">
-                    {{> september}}
-                </div>
-            {{else}}
-                <div class="flex-4columns">
-                    {{> trajectory}}
-                </div>
-            {{/if}}
-        {{else}}
-            {{#if Fails}}
-                <div class="flex-3columns">
-                    {{> trajectory}}
-                </div>
-            {{else}}
-                <div class="flex-3columns">
-                    {{> trajectory}}
-                </div>
-            {{/if}}
-        {{/if}}
-    </div>
-
-    <!-- Lower row -->
 <div class="flex-row">
     <div class="flex-column column-even colijkingstoets">
         <div class="vertical-title">IJkingstoets</div>
@@ -64,8 +25,10 @@
             <div class="column-title">IJkingstoets</div>
             <div class="CSE"></div>
         </div>
-        <div class="trajectory">
-            {{> trajectory}}
+        <div class="traject">
+            {{#with GetPeriod 0 }}
+                {{> trajectory}}
+            {{/with}}
         </div>
         <div class="bottom">
             {{#if Template.subscriptionsReady}}
@@ -82,7 +45,7 @@
         </div>
     </div>
 
-<div class="flex-column colttt">
+    <div class="flex-column colttt">
     <div class="vertical-title">Tussentijdse Toetsen</div>
     <div class="top">
         <div class="fa compress-colttt fa-compress">
@@ -93,8 +56,10 @@
         </div>
         <div class="CSE"></div>
     </div>
-    <div class="Trajectory">
-        {{> trajectory}}
+    <div class="traject">
+        {{#with GetPeriod 1 }}
+            {{> trajectory}}
+        {{/with}}
     </div>
     <div class="bottom">
         {{#if Template.subscriptionsReady}}
@@ -110,34 +75,39 @@
         {{/if}}
     </div>
 </div>
-<div class="flex-column column-even coljan">
-            <div class="vertical-title">Januari</div>
-            <div class="top">
-                <div class="fa compress-coljan fa-compress">
-                    <paper-ripple></paper-ripple>
-                </div>
-                <div class="column-title">Januari</div>
-                <div class="periode">1e examenperiode</div>
-                <div class="CSE">
-                    {{#with CSE_januari}}
-                        {{> CSE_bar }}
-                    {{/with}}
-                </div>
+    <div class="flex-column column-even coljan">
+        <div class="vertical-title">Januari</div>
+        <div class="top">
+            <div class="fa compress-coljan fa-compress">
+                <paper-ripple></paper-ripple>
             </div>
-            <div class="bottom">
-                {{#if Template.subscriptionsReady}}
-                    {{#each studentCourses 1}}
-                        <div class="flex-item">
-                            {{> course}}
-                        </div>
-                    {{/each}}
-                {{else}}
-                    <div class="loading">
-                        <paper-spinner alt="Loading" active></paper-spinner>
-                    </div>
-                {{/if}}
+            <div class="column-title">Januari</div>
+            <div class="periode">1e examenperiode</div>
+            <div class="CSE">
+                {{#with CSE_januari}}
+                    {{> CSE_bar }}
+                {{/with}}
             </div>
         </div>
+        <div class="traject">
+            {{#with GetPeriod 3 }}
+                {{> trajectory}}
+            {{/with}}
+        </div>
+        <div class="bottom">
+            {{#if Template.subscriptionsReady}}
+                {{#each studentCourses 1}}
+                    <div class="flex-item">
+                        {{> course}}
+                    </div>
+                {{/each}}
+            {{else}}
+                <div class="loading">
+                    <paper-spinner alt="Loading" active></paper-spinner>
+                </div>
+            {{/if}}
+        </div>
+    </div>
 
     {{#if ShowJuni}}
             <div class="flex-column coljun">
