--- a/client/body/body.html
+++ b/client/body/body.html
@@ -258,7 +258,7 @@
     {{/if}}
 
         <!--Always show the bachelor column-->
-        <div class="flex-column colfuture">
+        <div class="flex-column colfuture" id="colfuture">
             <div class="vertical-title">bachelor</div>
             <div class="top">
                 <div class="fa compress-colfuture fa-compress">
