clean up courses

--- a/client/course/resultGraph/resultGraph.html
+++ b/client/course/resultGraph/resultGraph.html
@@ -1,5 +1,5 @@
 <template name="resultGraph">
-    <div id="{{id}}_{{semester}}" class="course {{color}}">
+    <div id="{{getStrippedCourseID}}_{{columnindex}}" class="course {{color}}">
         <div class="course-top">
             <div class="name">{{name}}</div>
             <div class="top-bar {{color}}">
