fix trajectory without ijkingstoets collection

--- a/client/column/column.html
+++ b/client/column/column.html
@@ -14,7 +14,9 @@
             </div>
         </div>
         <div class="traject">
-            {{> trajectory}}
+            {{#with trajectInfo}}
+                {{> trajectory}}
+            {{/with}}
         </div>
         <div class="bottom">
             {{#if Template.subscriptionsReady}}
