fix compressing column + layout variables

--- a/client/column/column.html
+++ b/client/column/column.html
@@ -1,8 +1,8 @@
 <template name="column">
-    <div class="flex-column {{class}} {{name}}">
+    <div class="flex-column {{class}} {{period}}">
         <div class="vertical-title">{{title}}</div>
         <div class="top">
-            <div class="fa compress-coljan fa-compress">
+            <div class="fa compress-{{period}} fa-compress">
                 <paper-ripple></paper-ripple>
             </div>
             <div class="column-title">{{title}}</div>
