first version of register

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -1,4 +1,5 @@
 <body>
+{{> register}}
 <div class="loading-screen">
     <div>
         <paper-spinner alt="Loading Dashboard" active></paper-spinner>
