--- a/client/register/register.html
+++ b/client/register/register.html
@@ -1,10 +1,9 @@
 <template name="register">
-    <div class="register">
-        <h2>Login</h2>
-        <form class="register">
-            <p>User: <input type="username" name="username"></p>
-            <p>Password: <input type="password" name="password"></p>
-            <p><input type="submit" value="Login"></p>
-        </form>
+  <div class="register">
+    <div class="register-container">
+      <h1>Access Token: </h1>
+      <paper-input class="user-token"></paper-input>
+      <paper-button>Login</paper-button>
     </div>
+  </div>
 </template>
