kleine aanpassingen op vraag van

--- a/client/body/body.html
+++ b/client/body/body.html
@@ -9,51 +9,54 @@
 </body>
 
 <template name="dashboard">
-  <div class="nostudent">
-    <div>
-      <h1>Geen student gevonden</h1>
-    </div>
-  </div>
-  {{> student}}
-
-  <div class="flex-container">
-    <div class="flex-row">
-      {{#with GetColumnInfo 0}}
-      {{> column}}
-      {{/with}}
-      {{#with GetColumnInfo 1}}
-      {{> column}}
-      {{/with}}
-      {{#with GetColumnInfo 2}}
-      {{> column}}
-      {{/with}}
-      <!--{{#with GetColumnInfo 3}}-->
-      <!--{{> column}}-->
-      <!--{{/with}}-->
-      <!--{{#with GetColumnInfo 4}}-->
-      <!--{{> column}}-->
-      <!--{{/with}}-->
-      <!--Always show the bachelor column-->
-      <div class="flex-column colfuture" id="colfuture">
-        <div class="vertical-title">bachelor</div>
-        <div class="top">
-          <div class="fa compress-colfuture fa-compress">
-            <paper-ripple></paper-ripple>
+  <div class="dashboardcontainer"  >
+      <div class="nostudent">
+          <div>
+              <h1>Geen student gevonden</h1>
           </div>
-          <div class="column-title">bachelor</div>
-          <div id="legend" class="periode legend">
-            <div class="legend-item legend3">3j</div>
-            <div class="legend-item legend4">4j</div>
-            <div class="legend-item legend5">5j</div>
-            <div class="legend-item legendnot">Niet</div>
-          </div>
-        </div>
-        <div class="bottom">
-          {{#if Template.subscriptionsReady}}
-          {{> future}}
-          {{/if}}
-        </div>
       </div>
-    </div>
+      {{> student}}
+
+      <div class="flex-container">
+          <div class="flex-row">
+              {{#with GetColumnInfo 0}}
+                  {{> column}}
+              {{/with}}
+              {{#with GetColumnInfo 1}}
+                  {{> column}}
+              {{/with}}
+              {{#with GetColumnInfo 2}}
+                  {{> column}}
+              {{/with}}
+                  <!--{{#with GetColumnInfo 3}}-->
+              <!--{{> column}}-->
+                  <!--{{/with}}-->
+                  <!--{{#with GetColumnInfo 4}}-->
+              <!--{{> column}}-->
+                  <!--{{/with}}-->
+              <!--Always show the bachelor column-->
+              <div class="flex-column colfuture" id="colfuture">
+                  <div class="vertical-title">bachelor</div>
+                  <div class="top">
+                      <div class="fa compress-colfuture fa-compress">
+                          <paper-ripple></paper-ripple>
+                      </div>
+                      <div class="column-title">Opleiding</div>
+                      <div id="legend" class="periode legend">
+                          <div class="legend-item legend3">+0j</div>
+                          <div class="legend-item legend4">+1j</div>
+                          <div class="legend-item legend5">+2j</div>
+                          <div class="legend-item legendnot">Niet</div>
+                      </div>
+                  </div>
+                  <div class="bottom">
+                      {{#if Template.subscriptionsReady}}
+                          {{> future}}
+                      {{/if}}
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
+
 </template>
