--- a/client/register/register.html
+++ b/client/register/register.html
@@ -2,7 +2,7 @@
   <div class="register">
     <div class="register-container">
       <h1>Access Token: </h1>
-      <paper-input class="user-token" type="password"></paper-input>
+      <paper-input class="user-token" type="text" id="input"></paper-input>
       <paper-button>Login</paper-button>
     </div>
   </div>
