--- a/client/student/student.html
+++ b/client/student/student.html
@@ -3,5 +3,6 @@
         <i class="fa fa-user" aria-hidden="true"></i>
         <span id="studentName">{{studentName}}</span>
         <input type="text" placeholder="Student #" value="{{student}}">
+        <span id="nieuw">{{newStudent}}</span>
     </div>
 </template>
