No error except for trajectory
showing no student so probably something went wrong with publish subscribe

--- a/client/column/column.html
+++ b/client/column/column.html
@@ -13,11 +13,11 @@
                 {{/if}}
             </div>
         </div>
-        <div class="traject">
-            {{#with trajectInfo}}
-                {{> trajectory}}
-            {{/with}}
-        </div>
+        <!--<div class="traject">-->
+            <!--{{#with trajectInfo}}-->
+                <!--{{> trajectory}}-->
+            <!--{{/with}}-->
+        <!--</div>-->
         <div class="bottom">
             {{#if Template.subscriptionsReady}}
                 {{#each studentCourses}}
