--- a/client/body/body.html
+++ b/client/body/body.html
@@ -19,9 +19,9 @@
 
       <div class="flex-container">
           <div class="flex-row">
-              <!--{{#with GetColumnInfo 0}}-->
-                  <!--{{> column}}-->
-              <!--{{/with}}-->
+              {{#with GetColumnInfo 0}}
+                  {{> column}}
+              {{/with}}
               <!--{{#with GetColumnInfo 1}}-->
                   <!--{{> column}}-->
               <!--{{/with}}-->
