--- a/client/body/body.html
+++ b/client/body/body.html
@@ -17,15 +17,15 @@
 
       <div class="flex-container">
           <div class="flex-row">
-              {{#with GetColumnInfo 0}}
-                  {{> column}}
-              {{/with}}
-              {{#with GetColumnInfo 1}}
-                  {{> column}}
-              {{/with}}
-              {{#with GetColumnInfo 2}}
-                  {{> column}}
-              {{/with}}
+              <!--{{#with GetColumnInfo 0}}-->
+                  <!--{{> column}}-->
+              <!--{{/with}}-->
+              <!--{{#with GetColumnInfo 1}}-->
+                  <!--{{> column}}-->
+              <!--{{/with}}-->
+              <!--{{#with GetColumnInfo 2}}-->
+                  <!--{{> column}}-->
+              <!--{{/with}}-->
                   <!--{{#with GetColumnInfo 3}}-->
               <!--{{> column}}-->
                   <!--{{/with}}-->
@@ -33,7 +33,7 @@
               <!--{{> column}}-->
                   <!--{{/with}}-->
               <!--Always show the bachelor column-->
-              <!--{{> futurecolumn}}-->
+              {{> futurecolumn}}
           </div>
       </div>
   </div>
