--- a/client/body/body.html
+++ b/client/body/body.html
@@ -17,21 +17,21 @@
 
       <div class="flex-container">
           <div class="flex-row">
-              <!--{{#with GetColumnInfo 0}}-->
-                  <!--{{> column}}-->
+              {{#with GetColumnInfo 0}}
+                  {{> column}}
+              {{/with}}
+              {{#with GetColumnInfo 1}}
+                  {{> column}}
+              {{/with}}
+              {{#with GetColumnInfo 2}}
+                  {{> column}}
+              {{/with}}
+              <!--{{#with GetColumnInfo 3}}-->
+                <!--{{> column}}-->
               <!--{{/with}}-->
-              <!--{{#with GetColumnInfo 1}}-->
-                  <!--{{> column}}-->
+              <!--{{#with GetColumnInfo 4}}-->
+                <!--{{> column}}-->
               <!--{{/with}}-->
-              <!--{{#with GetColumnInfo 2}}-->
-                  <!--{{> column}}-->
-              <!--{{/with}}-->
-                  <!--{{#with GetColumnInfo 3}}-->
-              <!--{{> column}}-->
-                  <!--{{/with}}-->
-                  <!--{{#with GetColumnInfo 4}}-->
-              <!--{{> column}}-->
-                  <!--{{/with}}-->
               <!--Always show the bachelor column-->
               {{> futurecolumn}}
           </div>
